Add icon plus change number

--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
     />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" crossorigin="anonymous"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-   
+    <link rel="icon" href="/src/images/img/Ellipse1.png">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   
  
-    <title>Jumbo Hair</title>
+    <title>Jumbo Hair Tu tienda de sechunchies</title>
   </head>
   <body >
     
